--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: goreleaser
+name: Release
 
 on:
   workflow_run:
@@ -6,6 +6,7 @@ on:
     branches: [ main ]
     types:
       - completed
+
   pull_request:
   push:
 
